--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,10 @@ environment:
   sdk: ">=2.0.0 <3.0.0"
 
 dependencies:
-  redurx: ^1.1.1
+  #redurx: ^1.1.1
+  redurx:
+    git:
+      url: git@github.com:feilfeilundfeil/ReduRx.git
   flutter:
     sdk: flutter
 
